--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
     <a href="COMPCABO.HTML"><button>Comprimento do Cabo</button></a>
     <a href="INTER.HTML"><button>Intermodulação</button></a>
     <a href="DISTANT.HTML"><button>Distância entre Antenas (vertical)</button></a>
+     <a href="COVERMAP.HTML"><button>Mapa de Cobertura Simples</button></a>
+ 
   </div>
 
   <img src="logo.jpg" width="200" height="120" alt="Logo" />
 
 </body>
 </html>
+
