--- a/COVERMAP.HTML
+++ b/COVERMAP.HTML
@@ -2,27 +2,22 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Heatmap Offline com Controle de Antenas</title>
+<title>Heatmap com Distribuição Detalhada de Cores</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 <style>
-  html, body { height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; }
-  body { display: flex; }
-  #map { flex: 1; height: 100vh; }
-  #sidebar { width: 360px; background: #fff; padding: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3); overflow-y: auto; }
-  input, button { width: 100%; margin: 5px 0; padding: 5px; }
-  table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-  th, td { border: 1px solid #ccc; padding: 5px; text-align: center; }
-  th { background: #eee; }
-  tr:hover { background: #f0f0f0; cursor: pointer; }
-  #btnVoltar, #exportBtn {
-    background: #3498db;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  #btnVoltar:hover, #exportBtn:hover {
-    background: #217dbb;
-  }
+html, body { height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+body { display: flex; }
+#map { flex: 1; height: 100vh; }
+#sidebar { width: 400px; background: #fff; padding: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3); overflow-y: auto; display: flex; flex-direction: column; }
+input, button { width: 100%; margin: 5px 0; padding: 5px; }
+table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+th, td { border: 1px solid #ccc; padding: 5px; text-align: center; }
+th { background: #eee; }
+tr:hover { background: #f0f0f0; cursor: pointer; }
+button { background: #3498db; color: white; border: none; cursor: pointer; }
+button:hover { background: #217dbb; }
+.color-cell { font-weight: bold; color: white; }
+#btnVoltar { margin-bottom: 10px; }
 </style>
 </head>
 <body>
@@ -30,6 +25,8 @@
 <div id="map"></div>
 
 <div id="sidebar">
+  <button id="btnVoltar">← Voltar Página Anterior</button>
+
   <h3>Adicionar Antena</h3>
   <form id="antennaForm">
     Nome: <input type="text" id="nome" required>
@@ -46,11 +43,15 @@
     <tbody></tbody>
   </table>
 
-  <button id="btnVoltar">Voltar Página Anterior</button>
+  <h3>Distribuição de Potência por Cor</h3>
+  <table id="colorTable">
+    <thead><tr><th>Cor</th><th>Percentual</th></tr></thead>
+    <tbody></tbody>
+  </table>
+
   <button id="exportBtn">Exportar Heatmap PNG</button>
 </div>
 
-<!-- Scripts -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
 <script src="https://unpkg.com/leaflet-image/leaflet-image.js"></script>
@@ -58,18 +59,17 @@
 <script>
 document.addEventListener('DOMContentLoaded', function(){
 
-    // Inicializa mapa
     const map = L.map('map').setView([-23.5505, -46.6333], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
     let heatPoints = [];
-    const heat = L.heatLayer(heatPoints, {radius: 25, blur: 15, maxZoom: 17}).addTo(map);
     let antennas = [];
     let markers = [];
+    const heat = L.heatLayer(heatPoints, {radius: 25, blur: 15, maxZoom: 17}).addTo(map);
 
-    // Gera pontos do heatmap
+    // Gera pontos do heatmap com intensidade baseada em potência e altura
     function generateHeatPoints(lat, lon, pot, altura, numPoints=200, maxRadius=2000){
         let points = [];
         for(let i=0; i<numPoints; i++){
@@ -77,27 +77,48 @@ document.addEventListener('DOMContentLoaded', function(){
             const angle = Math.random() * 2 * Math.PI;
             const dx = r * Math.cos(angle) / 111320;
             const dy = r * Math.sin(angle) / 110540;
-            const intensity = Math.max(0.1, Math.min(1, (pot * (altura/10)) / (r/100 + 1)));
+            let intensity = (pot * (altura/10)) / (r/100 + 1);
+            intensity = Math.min(1, Math.max(0, intensity / 100)); // normaliza para 0-1
             points.push([lat + dy, lon + dx, intensity]);
         }
         return points;
     }
 
-    function getColor(percent){
-        if(percent > 66) return "#ff0000";
-        if(percent > 33) return "#ffff00";
-        return "#00ff00";
-    }
+    // Define cores detalhadas
+function getColorForTable(percent){
+    if(percent > 75) return "red";
+    if(percent > 50) return "orange";
+    if(percent > 25) return "yellow";
+    if(percent > 10) return "green";
+    return "blue";
+}
 
     function addAntennaToTable(antenna){
         const tbody = document.querySelector('#antennaTable tbody');
         const row = tbody.insertRow();
         const percent = Math.min(100, Math.round(antenna.pot));
-        row.innerHTML = `<td>${antenna.nome}</td><td style="background:${getColor(percent)}">${percent}%</td><td>${antenna.altura}</td>`;
+        row.innerHTML = `<td>${antenna.nome}</td><td style="background:${getColorForTable(percent)}">${percent}%</td><td>${antenna.altura}</td>`;
+
         row.addEventListener('click', () => map.setView([antenna.lat, antenna.lon], 15));
     }
 
-    // Formulário
+    // Calcula distribuição detalhada de cores
+    function updateColorDistribution(){
+        const counts = {red:0, orange:0, yellow:0, green:0, blue:0};
+        heatPoints.forEach(p => {
+            const color = getColor(p[2]);
+            counts[color]++;
+        });
+        const total = heatPoints.length;
+        const tbody = document.querySelector('#colorTable tbody');
+        tbody.innerHTML = "";
+        for(const color of ['red','orange','yellow','green','blue']){
+            const percent = total ? ((counts[color]/total)*100).toFixed(1) : 0;
+            const row = tbody.insertRow();
+            row.innerHTML = `<td class="color-cell" style="background:${color}">${color}</td><td>${percent}%</td>`;
+        }
+    }
+
     document.getElementById('antennaForm').addEventListener('submit', function(e){
         e.preventDefault();
         const nome = document.getElementById('nome').value;
@@ -120,17 +141,16 @@ document.addEventListener('DOMContentLoaded', function(){
         antennas.push(antennaObj);
         addAntennaToTable(antennaObj);
 
+        updateColorDistribution();
         this.reset();
     });
 
-    // Voltar à página anterior
     document.getElementById('btnVoltar').addEventListener('click', () => {
         window.history.back();
     });
 
-    // Exportar mapa completo
     document.getElementById('exportBtn').addEventListener('click', () => {
-        leafletImage(map, function(err, canvas) {
+        leafletImage(map, function(err, canvas){
             if(err) { alert("Erro ao gerar imagem"); return; }
             const link = document.createElement('a');
             link.download = 'heatmap_completo.png';
