--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <a href="INTER.HTML"><button>Intermodulação</button></a>
     <a href="DISTANT.HTML"><button>Distância entre Antenas (vertical)</button></a>
      <a href="COVERMAP.HTML"><button>Mapa de Cobertura Simples</button></a>
+    <a href="AZIMU.HTML"><button>Azimute e Distância entre Antenas</button></a>
  
   </div>
 
@@ -86,4 +87,5 @@
 
 </body>
 </html>
+
 
