--- a/AZIMU.HTML
+++ b/AZIMU.HTML
@@ -70,6 +70,7 @@
   <input type="number" id="alt2" step="any" placeholder="950" required>
 
   <button type="button" onclick="calcular()">Calcular</button>
+<button type="button" onclick="history.back()">Voltar</button>
 </form>
 
 <div id="resultado"></div>
@@ -120,9 +121,8 @@ function calcular() {
   `;
 }
 </script>
-<br><button onclick="history.back()">Voltar</button>
-</br>
 </body>
 </html>
+
 
 
