--- a/AZIMU.HTML
+++ b/AZIMU.HTML
@@ -36,6 +36,12 @@
     cursor: pointer;
   }
   button:hover { background-color: #005fa3; }
+button:last-of-type {
+  background-color: #888;
+}
+button:last-of-type:hover {
+  background-color: #666;
+}
   #resultado {
     margin-top: 20px;
     font-size: 1.1em;
@@ -123,6 +129,7 @@ function calcular() {
 </script>
 </body>
 </html>
+
 
 
 
